# ILC_TrackingControl_Project

./: README.md
Kotai_bringup/roboteq_nonholonomic_driver/: CMakeLists.txt  package.xml
Kotai_bringup/roboteq_nonholonomic_driver/src/: drive2.cpp  driver.cpp
Kotai_install/: install.sh
Kotai_launch/: core.launch  driver.launch
Kotai_localization/robot_localization/launch/: ekf_local.launch
Kotai_localization/robot_localization/params/: dual_ekf_navsat.yaml  ekf_local.yaml
Kotai_msgs/roboteq_nonholonomic_msgs/: CMakeLists.txt  package.xml
Kotai_msgs/roboteq_nonholonomic_msgs/msg/: AckermannStamped.msg
Kotai_sensor/gnss/ublox/ublox_gps/config/: tai.yaml
Kotai_sensor/gnss/ublox/ublox_gps/launch/: tai.launch
Kotai_sensor/imu/razor_imu_9dof/config/: razor.yaml
Kotai_sensor/lidar/sick/sick_tim/launch/: sick_tim571_2050101.launch
Kotai_service/joy_map/: CMakeLists.txt  package.xml
Kotai_service/joy_map/config/: xbox.config.yaml
Kotai_service/joy_map/src/: teleop_twist_joy.cpp
