
<package>
  <name>roboteq_nonholonomic_msgs</name>
  <version>0.0.0</version>
  <description>The roboteq_nonholonomic_msgs package</description>
  <maintainer email="punyapat.areerob@mail.kmutt.ac.th">punyapat</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
